--- a/VidCoder/Resources/Translations/CommonRes.ka.resx
+++ b/VidCoder/Resources/Translations/CommonRes.ka.resx
@@ -135,7 +135,7 @@
     <value>ტიტრის მართვა, დროის წარმოსახვის დასაჩქარებლად ან შესაყოვნებლად.</value>
   </data>
   <data name="QueueColumnNameRange" xml:space="preserve">
-    <value>დიაპაზონი</value>
+    <value>ინტერვალი</value>
     <comment>The label for the queue column that specifies what portion of the video to encode. (Like 25:23 - 37:50)</comment>
   </data>
   <data name="QueueColumnNameDestination" xml:space="preserve">
@@ -323,7 +323,7 @@
     <value>შემოჭრა</value>
   </data>
   <data name="QueueColumnNameOutputSize" xml:space="preserve">
-    <value>საბოლოო ზომა</value>
+    <value>საბოლოო განზომილება</value>
   </data>
   <data name="QueueColumnNameSubtitleTracks" xml:space="preserve">
     <value>ტიტრის წყაროები</value>
