--- a/VidCoder/Resources/Translations/EncodingRes.id.resx
+++ b/VidCoder/Resources/Translations/EncodingRes.id.resx
@@ -736,7 +736,13 @@ Anda akan dijamin aliran yang kompatibel. Anda harus menyetel ini jika anda tahu
   <data name="DeblockToolTip" xml:space="preserve">
     <value>Deblock mengurangi artifak yang membuat blok yang disebabkan oleh kompresi gambar kualitas rendah.</value>
   </data>
-  
+  <data name="DeinterlaceToolTip" xml:space="preserve">
+    <value>Deinterlace menghilangkan artefak sisir dari gambar.
+
+Bwdif dan Yadif adalah dua deinterlace yang populer dan cepat.
+
+Decomb beralih di antara beberapa algoritma interpolasi untuk kecepatan dan kualitas.</value>
+  </data>
   <data name="DenoiseToolTip" xml:space="preserve">
     <value>Denoise mengurangi atau membuang tampilan kotor dan bertitik-titik. Ini akan memperbaiki efisiensi kompresi dan membuat gambar dengan kualitas lebih tinggi pada ukuran berkas lebih kecil.
 Terlalu banyak pada pengaturan denoise akan merusak kualitas gambar karena banyak detail hilang.
@@ -826,12 +832,28 @@ Lapsharp menajamkan menggunakan kernel konvolusi dengan mengaproksimasi filter p
   <data name="PadColorTextToolTip" xml:space="preserve">
     <value>Format: FFFFFF</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="ChromaSmoothLabel" xml:space="preserve">
+    <value>Kroma yang mulus:</value>
+  </data>
+  <data name="ColorspaceLabel" xml:space="preserve">
+    <value>Warnaruang:</value>
+  </data>
+  <data name="ChromaSmoothToolTip" xml:space="preserve">
+    <value>Mengurangi noise kroma, pelangi, dan artefak visual lainnya yang menonjol. Berguna untuk menyelesaikan berbagai masalah terkait warna, khususnya dengan konten resolusi rendah dari sumber analog, misalnya, sumber DVD dan VHS berkualitas buruk. Algoritme pemburaman/pemulusan sama seperti yang digunakan oleh filter unsharp.</value>
+  </data>
+  <data name="ConstrainToOneAxisCheckBox" xml:space="preserve">
+    <value>Batasi ke satu sumbu</value>
+  </data>
+  <data name="ConstrainToOneAxisToolTip" xml:space="preserve">
+    <value>Jika diaktifkan, hanya sumbu dengan total krop yang terdeteksi paling banyak yang akan dikrop. Contohnya, jika Top+Bottom = 32 dan Left+Right = 6, maka pemangkasan pada Left dan Right akan ditetapkan ke 0.</value>
+  </data>
+  <data name="MinimumCroppingLabel" xml:space="preserve">
+    <value>Minimum:</value>
+  </data>
+  <data name="MinimumCroppingToolTip" xml:space="preserve">
+    <value>Jika pemangkasan otomatis berada di bawah jumlah ini untuk suatu sisi, nonaktifkan pemangkasan untuk sisi tersebut. Berguna untuk mencegah pengambilan sampel ulang pada jumlah pemangkasan yang kecil.</value>
+  </data>
+  <data name="CroppingType_Conservative" xml:space="preserve">
+    <value>Konservatif</value>
+  </data>
 </root>
