--- a/VidCoder/Resources/Translations/MainRes.fr.resx
+++ b/VidCoder/Resources/Translations/MainRes.fr.resx
@@ -283,7 +283,11 @@
   <data name="StoppedEncoding" xml:space="preserve">
     <value>Arrêter l'encodage.</value>
   </data>
-  
+  <data name="DeleteSourceFilesConfirmationMessage" xml:space="preserve">
+    <value>Êtes-vous certain de vouloir {0} {1} fichier(s) source/dossier(s) ?</value>
+    <comment>{0} is the verb, can be "recycle" or "delete"
+{1} is the number of files that will be removed</comment>
+  </data>
   <data name="DeleteSourceFilesConfirmationTitle" xml:space="preserve">
     <value>Confirmer la suppression</value>
   </data>
@@ -322,7 +326,9 @@
   <data name="EtaLabel" xml:space="preserve">
     <value>ETA:</value>
   </data>
-  
+  <data name="WhenDoneLabel" xml:space="preserve">
+    <value>Une fois terminé</value>
+  </data>
   <data name="SourceOption_VideoFile" xml:space="preserve">
     <value>Fichier vidéo...</value>
   </data>
@@ -497,81 +503,258 @@
     <value>{0} autres titres ont une durée proche de celui-ci.</value>
     <comment>{0} is the number of titles that have a similar duration.</comment>
   </data>
-  
-  
-  
-  
-  
+  <data name="UseBackupDatabaseLine" xml:space="preserve">
+    <value>Vous avez un fichier de version {0} sauvegardé. Voulez-vous l'utiliser ?</value>
+    <comment>{0} is the version of the database file you have a backup for.</comment>
+  </data>
+  <data name="VideoPlayError" xml:space="preserve">
+    <value>Erreur lors de la lecture de la vidéo.</value>
+  </data>
+  <data name="CustomVideoPlayerError" xml:space="preserve">
+    <value>Aucun lecteur vidéo personnalisé trouvé à {0}.</value>
+    <comment>{0} is the path to the custom video player.</comment>
+  </data>
+  <data name="EnqueueFolderOfVideoFiles" xml:space="preserve">
+    <value>Ajouter un dossier de fichiers vidéo à la file d'attente...</value>
+  </data>
+  <data name="QueueMultipleScanErrorMessage" xml:space="preserve">
+    <value>Il y a eu des erreurs lors de l'analyse de certains fichiers et ils n'ont pas été ajoutés à la file d'attente :
+
+{0}</value>
+  </data>
   <data name="FileSizeColumnHeader" xml:space="preserve">
     <value>Taille</value>
     <comment>Used on the "completed encodes" tab, to label the column that shows the final output file size.</comment>
   </data>
-  
-  
+  <data name="OpenAppDataFolder" xml:space="preserve">
+    <value>Ouvrir le dossier des données de l'application</value>
+    <comment>Menu choice for opening the application data folder (that holds the VidCoder database file, logs, etc)</comment>
+  </data>
+  <data name="RibbonEncodingGroupLabel" xml:space="preserve">
+    <value>Encodage</value>
+  </data>
   <data name="RibbonSettingsGroupLabel" xml:space="preserve">
     <value>Paramètres</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="GlobalOptionsLabel" xml:space="preserve">
+    <value>Options globales</value>
+  </data>
+  <data name="EncodingSettingsButton" xml:space="preserve">
+    <value>Paramètres d'encodage : {0}</value>
+    <comment>{0} is a placeholder for the name of the encoding preset currently selected.</comment>
+  </data>
+  <data name="EncodingSettingsButtonToolTip" xml:space="preserve">
+    <value>Codecs vidéo et audio, dimensions, filtres, conteneur</value>
+  </data>
+  <data name="OpenSourceRibbonButton" xml:space="preserve">
+    <value>Open source</value>
+  </data>
+  <data name="ImportExportRibbonButton" xml:space="preserve">
+    <value>Importer/Exporter</value>
+    <comment>Label for ribbon button to import or export presets or queues</comment>
+  </data>
+  <data name="AddedSubtitleFromFile" xml:space="preserve">
+    <value>Sous-titre ajouté avec succès à partir du fichier {0}</value>
+  </data>
+  <data name="OpenFormat" xml:space="preserve">
+    <value>Ouvrir {0}</value>
+    <comment>Format for opening a source. For example: "Open E:\ - THE_INCREDIBLES"</comment>
+  </data>
+  <data name="NoAudioDescription" xml:space="preserve">
+    <value>Aucun audio trouvé dans la source.</value>
+  </data>
+  <data name="NoAudioSummary" xml:space="preserve">
+    <value>Aucun audio</value>
+    <comment>Summary text for when no audio tracks are found on the source</comment>
+  </data>
+  <data name="NoSubtitlesSummary" xml:space="preserve">
+    <value>Aucun sous-titre</value>
+    <comment>Summary text for when no subtitle tracks are found on the source and no external subtitles have been added</comment>
+  </data>
+  <data name="DataTooOldRunVidCoderVersion" xml:space="preserve">
+    <value>Vos données sont trop anciennes pour être mises à jour. Lancez VidCoder {0} une fois pour le mettre à jour vers une version compatible, puis réessayez cette version.</value>
+    <comment>This is shown on app start when old data is detected.</comment>
+  </data>
   <data name="BitrateColumn" xml:space="preserve">
     <value>Taux d'échantillonnage</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="SampleRateColumn" xml:space="preserve">
+    <value>Fréquence d'échantillonnage</value>
+  </data>
+  <data name="ClearRecentFilesButtonToolTip" xml:space="preserve">
+    <value>Effacer les fichiers récents</value>
+  </data>
+  <data name="OpenSourceLabel" xml:space="preserve">
+    <value>Ouvrir</value>
+    <comment>Label on top of the different options for opening video source on the startup screen.</comment>
+  </data>
+  <data name="ScanningSourceLabelFormat" xml:space="preserve">
+    <value>Analyse de {0}...</value>
+    <comment>{0} is the name of the source being scanned.</comment>
+  </data>
+  <data name="RetryFailedItemsMenuItem" xml:space="preserve">
+    <value>Réessayer toutes les tâches échouées</value>
+  </data>
+  <data name="StartChapterAutomationName" xml:space="preserve">
+    <value>Commencer le chapitre</value>
+    <comment>Narrator label for the chapter start combo box</comment>
+  </data>
+  <data name="EndChapterAutomationName" xml:space="preserve">
+    <value>Fin du chapitre</value>
+    <comment>Narrator label for the end chapter combo box</comment>
+  </data>
+  <data name="EditChaptersButtonAutomationName" xml:space="preserve">
+    <value>Modifier les chapitres</value>
+    <comment>Help text for screen readers for the Edit chapters button</comment>
+  </data>
+  <data name="ApplyCurrentEncodingSettings" xml:space="preserve">
+    <value>Appliquer les paramètres d'encodage actuels</value>
+  </data>
+  <data name="OpenSourceFolderOption" xml:space="preserve">
+    <value>Ouvrir le dossier source</value>
+    <comment>Menu option to open the folder of the source file in the queue</comment>
+  </data>
+  <data name="WithCurrentJobsFormat" xml:space="preserve">
+    <value>avec les tâches actuelles : {0}</value>
+    <comment>Shown as options for the "When done" combo box for actions that trigger when currently encoding job(s) complete. This string is only used when there are multiple items queued.
+{0} is the encode complete action, ex "Shut down"</comment>
+  </data>
+  <data name="WithQueueFormat" xml:space="preserve">
+    <value>avec la file d'attente : {0}</value>
+    <comment>Shown as options for the "When done" combo box for actions that trigger on queue completion. This string is only used when there are multiple items queued.
+{0} is the encode complete action, ex "Shut down"</comment>
+  </data>
+  <data name="VideoEncodingOptionsToolTip" xml:space="preserve">
+    <value>Options d'encodage vidéo</value>
+  </data>
+  <data name="AudioEncodingOptionsToolTip" xml:space="preserve">
+    <value>Options d'encodage audio</value>
+  </data>
+  <data name="NewVersionDownloadFinishedOnLaunchStatus" xml:space="preserve">
+    <value>La version {0} a terminé de télécharger.</value>
+  </data>
+  <data name="RemoveFromQueueMenuItem" xml:space="preserve">
+    <value>Supprimer de la file d'attente</value>
+  </data>
+  <data name="ClearSucceededMenuItem" xml:space="preserve">
+    <value>Effacer les tâches réussies</value>
+  </data>
+  <data name="ClearFailedMenuItem" xml:space="preserve">
+    <value>Effacer les tâches échouées</value>
+  </data>
+  <data name="ClearQueueConfirmationMessage" xml:space="preserve">
+    <value>Êtes-vous sûr de vouloir supprimer tous les éléments de la file d'attente ?</value>
+  </data>
+  <data name="RemoveAllFomQueueMenuItem" xml:space="preserve">
+    <value>Supprimer tout de la file d'attente</value>
+  </data>
+  <data name="EncodeCompleteActionAbortedDueToErrorsMessage" xml:space="preserve">
+    <value>L'action d'encodage complété n'a pas été exécutée en raison d'erreurs dans la liste de résultats d'encodage.</value>
+  </data>
+  <data name="AudioPickerButtonToolTip" xml:space="preserve">
+    <value>Sélectionner automatiquement les pistes audio...</value>
+  </data>
+  <data name="SubtitlePickerButtonToolTip" xml:space="preserve">
+    <value>Sélectionner automatiquement les pistes de sous-titres...</value>
+  </data>
+  <data name="AudioSubtitleTrackColumnHeader" xml:space="preserve">
+    <value>Piste</value>
+    <comment>Column header for the audio or subtitle track summary. This is an an auto-generated summary that includes language, format, etc.</comment>
+  </data>
+  <data name="AudioTrackNameAutomationName" xml:space="preserve">
+    <value>Nom de la piste audio</value>
+    <comment>Narrator label for the audio track name text box.</comment>
+  </data>
+  <data name="SubtitleNameAutomationName" xml:space="preserve">
+    <value>Nom du sous-titre</value>
+    <comment>Narrator label for the subtitle name text box.</comment>
+  </data>
+  <data name="CouldNotRecycleFile" xml:space="preserve">
+    <value>Erreur lors de l'envoi des fichiers à la corbeille.</value>
+  </data>
+  <data name="DestinationAutomaticToolTip" xml:space="preserve">
+    <value>La destination est définie automatiquement. Cliquez pour modifier les paramètres.</value>
+  </data>
+  <data name="DestinationManualToolTip" xml:space="preserve">
+    <value>La destination est définie manuellement. Cliquez pour revenir en mode automatique.</value>
+  </data>
+  <data name="CompareAgainstOriginal" xml:space="preserve">
+    <value>Comparer avec l'original</value>
+  </data>
+  <data name="CompareEncodedLabel" xml:space="preserve">
+    <value>Encodé</value>
+    <comment>Label for the encoded video when comparing original vs encoded</comment>
+  </data>
+  <data name="CompareOriginalLabel" xml:space="preserve">
+    <value>Original</value>
+    <comment>Label for the original video when comparing original vs encoded</comment>
+  </data>
+  <data name="CompareWindowHelpText" xml:space="preserve">
+    <value>Cliquez ou maintenez la touche Ctrl pour afficher la version encodée.</value>
+  </data>
+  <data name="CompareWindowTitleFormat" xml:space="preserve">
+    <value>Comparer les vidéos : {0} - {1}</value>
+    <comment>Title for the Video compare window.
+{0} is a string indicating if it's original or encoded.
+{1} is the file name, e.g. MyFile.mkv</comment>
+  </data>
+  <data name="MuteAutomationName" xml:space="preserve">
+    <value>Couper le son</value>
+    <comment>Text for screen readers for the mute button on video playback</comment>
+  </data>
+  <data name="UnmuteAutomationName" xml:space="preserve">
+    <value>Rétablir le son</value>
+    <comment>Text for screen readers for the unmute button on video playback</comment>
+  </data>
+  <data name="AutoPauseLowBattery" xml:space="preserve">
+    <value>Pause automatique en raison de la batterie faible.</value>
+  </data>
+  <data name="AutoPauseLowDiskSpace" xml:space="preserve">
+    <value>Pause automatique en raison de l'espace disque libre inférieur à {0}Go.</value>
+    <comment>{0} is the disk space threshold for auto-pause in GB</comment>
+  </data>
+  <data name="AutoPauseProcessDetected" xml:space="preserve">
+    <value>Pause automatique, processus détecté : {0}</value>
+    <comment>{0} is the name of the process we were waiting for to pause</comment>
+  </data>
+  <data name="AutoPauseResumeBattery" xml:space="preserve">
+    <value>Reprise automatique, source d'alimentation connectée.</value>
+  </data>
+  <data name="AutoPauseResumeDiskSpace" xml:space="preserve">
+    <value>Reprise automatique, le disque a de l'espace libre.</value>
+  </data>
+  <data name="AutoPauseResumeProcess" xml:space="preserve">
+    <value>Reprise automatique, les processus ont disparu.</value>
+  </data>
+  <data name="Win7DeprecationWarning" xml:space="preserve">
+    <value>VidCoder n'est plus supporté sur Windows 7 et 8.
+
+Vous pouvez continuer à utiliser VidCoder à vos propres risques. Certaines fonctionnalités ne sont pas fonctionnelles et il peut y avoir d'autres problèmes inconnus. Il n'y a pas de support technique disponible lorsque ces problèmes se produisent.
+
+La version 5 était la dernière testée pour Windows 7 et 8.
+
+Cette alerte ne s'affichera que deux fois.</value>
+  </data>
+  <data name="RemoveSourceFiles_Delete" xml:space="preserve">
+    <value>supprimer</value>
+    <comment>Plugged into DeleteSourceFilesConfirmationMessage when talking about deleting or recycling files.</comment>
+  </data>
+  <data name="RemoveSourceFiles_Recycle" xml:space="preserve">
+    <value>recycler</value>
+    <comment>Plugged into DeleteSourceFilesConfirmationMessage when talking about deleting or recycling files.</comment>
+  </data>
+  <data name="RequestFeatureMenuItem" xml:space="preserve">
+    <value>Demander une fonctionnalité</value>
+  </data>
+  <data name="CopyLogAndReportMenuItem" xml:space="preserve">
+    <value>Copier le journal et signaler le problème</value>
+  </data>
+  <data name="WatcherMenuItem" xml:space="preserve">
+    <value>Observateur</value>
+  </data>
+  <data name="QueueProgressLabel" xml:space="preserve">
+    <value>Mise en file d'attente de {0}/{1}:</value>
+    <comment>{0} is the current job number for scanning and adding an item to the queue
+{1} is the total number of scanned items this session</comment>
+  </data>
 </root>
