--- a/VidCoder/Resources/Translations/MainRes.id.resx
+++ b/VidCoder/Resources/Translations/MainRes.id.resx
@@ -283,7 +283,11 @@
   <data name="StoppedEncoding" xml:space="preserve">
     <value>Pengkodean dihentikan.</value>
   </data>
-  
+  <data name="DeleteSourceFilesConfirmationMessage" xml:space="preserve">
+    <value>Apakah Anda yakin Anda ingin menghapus {0} {1} sumber file / folder?</value>
+    <comment>{0} is the verb, can be "recycle" or "delete"
+{1} is the number of files that will be removed</comment>
+  </data>
   <data name="DeleteSourceFilesConfirmationTitle" xml:space="preserve">
     <value>Konfirmasi Hapus</value>
   </data>
@@ -643,32 +647,110 @@
   <data name="EncodeCompleteActionAbortedDueToErrorsMessage" xml:space="preserve">
     <value>Tindakan setelah pengkodean selesai gagal dikerjakan karena ada kesalahan pada daftar hasil pengkodean.</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="AudioPickerButtonToolTip" xml:space="preserve">
+    <value>Otomatis memilih trek audio...</value>
+  </data>
+  <data name="SubtitlePickerButtonToolTip" xml:space="preserve">
+    <value>Otomatis pilih trek audio</value>
+  </data>
+  <data name="AudioSubtitleTrackColumnHeader" xml:space="preserve">
+    <value>Trek</value>
+    <comment>Column header for the audio or subtitle track summary. This is an an auto-generated summary that includes language, format, etc.</comment>
+  </data>
+  <data name="AudioTrackNameAutomationName" xml:space="preserve">
+    <value>Nama trek audio</value>
+    <comment>Narrator label for the audio track name text box.</comment>
+  </data>
+  <data name="SubtitleNameAutomationName" xml:space="preserve">
+    <value>Nama subtitel</value>
+    <comment>Narrator label for the subtitle name text box.</comment>
+  </data>
+  <data name="CouldNotRecycleFile" xml:space="preserve">
+    <value>Kesalahan saat mengirim file ke Recycle Bin.</value>
+  </data>
+  <data name="DestinationAutomaticToolTip" xml:space="preserve">
+    <value>Tujuan ditetapkan secara otomatis. Klik untuk mengedit pengaturan.</value>
+  </data>
+  <data name="DestinationManualToolTip" xml:space="preserve">
+    <value>Tujuan ditetapkan secara manual. Klik untuk kembali ke otomatis.</value>
+  </data>
+  <data name="CompareAgainstOriginal" xml:space="preserve">
+    <value>Bandingkan dengan aslinya</value>
+  </data>
+  <data name="CompareEncodedLabel" xml:space="preserve">
+    <value>Dikodekan</value>
+    <comment>Label for the encoded video when comparing original vs encoded</comment>
+  </data>
+  <data name="CompareOriginalLabel" xml:space="preserve">
+    <value>Asli</value>
+    <comment>Label for the original video when comparing original vs encoded</comment>
+  </data>
+  <data name="CompareWindowHelpText" xml:space="preserve">
+    <value>Klik atau tahan Ctrl untuk menampilkan versi yang disandikan.</value>
+  </data>
+  <data name="CompareWindowTitleFormat" xml:space="preserve">
+    <value>Perbandingan video: {0} - {1}</value>
+    <comment>Title for the Video compare window.
+{0} is a string indicating if it's original or encoded.
+{1} is the file name, e.g. MyFile.mkv</comment>
+  </data>
+  <data name="MuteAutomationName" xml:space="preserve">
+    <value>Diamkan</value>
+    <comment>Text for screen readers for the mute button on video playback</comment>
+  </data>
+  <data name="UnmuteAutomationName" xml:space="preserve">
+    <value>Hidupkan suara</value>
+    <comment>Text for screen readers for the unmute button on video playback</comment>
+  </data>
+  <data name="AutoPauseLowBattery" xml:space="preserve">
+    <value>Dihentikan otomatis karena baterai lemah.</value>
+  </data>
+  <data name="AutoPauseLowDiskSpace" xml:space="preserve">
+    <value>Dihentikan otomatis karena ruang disk kosong di bawah {0}GB.</value>
+    <comment>{0} is the disk space threshold for auto-pause in GB</comment>
+  </data>
+  <data name="AutoPauseProcessDetected" xml:space="preserve">
+    <value>Dihentikan otomatis, proses terdeteksi: {0}</value>
+    <comment>{0} is the name of the process we were waiting for to pause</comment>
+  </data>
+  <data name="AutoPauseResumeBattery" xml:space="preserve">
+    <value>Dilanjutkan secara otomatis, terhubung ke daya AC.</value>
+  </data>
+  <data name="AutoPauseResumeDiskSpace" xml:space="preserve">
+    <value>Secara otomatis melanjutkan, disk memiliki ruang kosong.</value>
+  </data>
+  <data name="AutoPauseResumeProcess" xml:space="preserve">
+    <value>Secara otomatis dilanjutkan, proses hilang.</value>
+  </data>
+  <data name="Win7DeprecationWarning" xml:space="preserve">
+    <value>VidCoder tidak lagi didukung pada Windows 7 atau 8.
+
+Anda dapat terus menggunakan VidCoder dengan risiko Anda sendiri. Fitur-fitur tertentu tidak berfungsi dan mungkin ada masalah lain yang tidak diketahui. Tidak ada dukungan yang tersedia ketika masalah ini terjadi.
+
+v5 adalah versi terakhir yang diuji untuk Windows 7/8.
+
+Peringatan ini hanya akan muncul dua kali.</value>
+  </data>
+  <data name="RemoveSourceFiles_Delete" xml:space="preserve">
+    <value>hapus</value>
+    <comment>Plugged into DeleteSourceFilesConfirmationMessage when talking about deleting or recycling files.</comment>
+  </data>
+  <data name="RemoveSourceFiles_Recycle" xml:space="preserve">
+    <value>Daur ulang</value>
+    <comment>Plugged into DeleteSourceFilesConfirmationMessage when talking about deleting or recycling files.</comment>
+  </data>
+  <data name="RequestFeatureMenuItem" xml:space="preserve">
+    <value>Sarankan fitur</value>
+  </data>
+  <data name="CopyLogAndReportMenuItem" xml:space="preserve">
+    <value>Salin log dan laporkan masalah</value>
+  </data>
+  <data name="WatcherMenuItem" xml:space="preserve">
+    <value>Pengamat</value>
+  </data>
+  <data name="QueueProgressLabel" xml:space="preserve">
+    <value>Antrian {0}/{1}:</value>
+    <comment>{0} is the current job number for scanning and adding an item to the queue
+{1} is the total number of scanned items this session</comment>
+  </data>
 </root>
