--- a/VidCoder/Resources/Translations/MiscRes.id.resx
+++ b/VidCoder/Resources/Translations/MiscRes.id.resx
@@ -260,6 +260,10 @@
   <data name="ReplaceJobButton" xml:space="preserve">
     <value>Gantikan pekerjaan</value>
   </data>
-  
-  
+  <data name="CopyAndReportIssueButton" xml:space="preserve">
+    <value>Menyalin dan melaporkan masalah</value>
+  </data>
+  <data name="OneTimeInstallerCleanup" xml:space="preserve">
+    <value>Kita perlu melakukan pembersihan satu kali pada penginstal lama. Pilih 'Ya' pada prompt berikutnya untuk menghapus versi lama VidCoder.</value>
+  </data>
 </root>
