--- a/VidCoder/Resources/Translations/OptionsRes.id.resx
+++ b/VidCoder/Resources/Translations/OptionsRes.id.resx
@@ -189,7 +189,9 @@
   <data name="BetaUpdatesNonBeta" xml:space="preserve">
     <value>Gabung penguji Beta agar mendapat pembaruan berkala</value>
   </data>
-  
+  <data name="UpdateReadyStatus" xml:space="preserve">
+    <value>Pembaruan {0} siap.</value>
+  </data>
   <data name="UpToDateStatus" xml:space="preserve">
     <value>VoipRaider sudah terbarukan.</value>
   </data>
@@ -370,7 +372,14 @@
   <data name="EncodeRetriesLabel" xml:space="preserve">
     <value>Jumlah percobaan enkoding:</value>
   </data>
-  
-  
-  
+  <data name="ApplyUpdateButton" xml:space="preserve">
+    <value>Terapkan pembaruan</value>
+  </data>
+  <data name="CheckingForUpdateStatus" xml:space="preserve">
+    <value>Memeriksa pembaruan</value>
+  </data>
+  <data name="UpdateModeLabel" xml:space="preserve">
+    <value>Mode pembaruan:</value>
+    <comment>Label for a dropdown to control whether app updates are applied immediately or delayed until next program launch.</comment>
+  </data>
 </root>
