--- a/VidCoder/Resources/Translations/PickerRes.id.resx
+++ b/VidCoder/Resources/Translations/PickerRes.id.resx
@@ -349,18 +349,51 @@
     <value>Pemilihan Trek:</value>
     <comment>Label for track selection mode for audio or subtitle tracks.</comment>
   </data>
-  
-  
-  
-  
-  
-  
-  
+  <data name="AudioSelectionModeToolTip" xml:space="preserve">
+    <value>Last selected (Terakhir dipilih) - Memilih trek audio yang terakhir dipilih jika ditemukan kecocokan, jika tidak, memilih yang pertama.
+Pertama - Hanya menyertakan track audio pertama.
+Berdasarkan indeks - Memilih berdasarkan indeks trek (berbasis 1)
+Bahasa - Memilih berdasarkan bahasa
+Semua - Menyertakan semua trek audio.</value>
+  </data>
+  <data name="SubtitleSelectionModeToolTip" xml:space="preserve">
+    <value>Last selected (Terakhir dipilih) - Memilih trek subtitle yang terakhir dipilih jika ditemukan kecocokan, jika tidak, tidak memilih trek.
+Tidak ada - Tidak ada subtitle yang disertakan.
+Pertama - Hanya menyertakan teks film pertama.
+Berdasarkan indeks - Memilih berdasarkan indeks trek (berbasis 1)
+Bahasa - Memilih berdasarkan bahasa
+Semua - Menyertakan semua subtitle.</value>
+  </data>
+  <data name="IgnoreFilesBelowCheckBox" xml:space="preserve">
+    <value>Abaikan file di bawah ini</value>
+    <comment>A number box follows this string: Ignore files below [ 10 ] MB</comment>
+  </data>
+  <data name="TimeRangeLabel" xml:space="preserve">
+    <value>Rentang waktu:</value>
+  </data>
+  <data name="VideoSelectionSection" xml:space="preserve">
+    <value>Pilihan video</value>
+  </data>
+  <data name="MetadataSection" xml:space="preserve">
+    <value>Metadata</value>
+  </data>
+  <data name="PassThroughMetadataCheckBox" xml:space="preserve">
+    <value>Melewati metadata video (sutradara, tanggal rilis, aktor, dll)</value>
+  </data>
   <data name="BurnInCheckBox" xml:space="preserve">
     <value>Burn In</value>
   </data>
-  
-  
-  
-  
+  <data name="ExternalSubtitleImportCheckBox" xml:space="preserve">
+    <value>Menambahkan file subtitle eksternal ({0}) dengan nama yang sama dengan file video input</value>
+  </data>
+  <data name="LanguageLabel" xml:space="preserve">
+    <value>Bahasa:</value>
+  </data>
+  <data name="SourceFileRemovalConfirmationCheckBox" xml:space="preserve">
+    <value>Konfirmasikan sebelum menghapus</value>
+  </data>
+  <data name="SourceFileRemovalLabel" xml:space="preserve">
+    <value>Penghapusan file sumber setelah penyandian berhasil:</value>
+    <comment>Label for the option to automatically delete source files on completion.</comment>
+  </data>
 </root>
